--- a/tools/textgenerator/package.json
+++ b/tools/textgenerator/package.json
@@ -5,9 +5,10 @@
   "description": "Generates HTML bibles for BrowserBible",
   "dependencies" : {
     "jquery"   :  "*",
-    "uglifyjs" : "*",
+    "jsdom"    :  "*",
+    "uglify-js" : "*",
     "progress": "*",
-    "minimist": "*"   
+    "minimist": "*"
   },
   "license": "MIT"
 }
