excluding texts directory (especially for additional texts added by me), and the node_modules directory (except the *.js files that need to be there)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ tools/utilities/
 tools/_old/
 content/texts/
 build/
+config-custom.js
+app/content/texts/
+!app/content/texts/README.md
+**/node_modules/
+!**/node_modules/*.js
