updating package.json to include jsdom, uglify-js, and mkdirp

--- a/tools/textgenerator/package.json
+++ b/tools/textgenerator/package.json
@@ -9,7 +9,8 @@
     "jsdom"    :  "*",
     "uglify-js" : "*",
     "progress": "*",
-    "minimist": "*"
+    "minimist": "*",
+    "mkdirp":"*"
   },
   "license": "MIT"
 }
